--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,14 @@
     box-sizing: border-box;
 }
 
-html,body{
-    height: 110vh;
+html,body{;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+#root{
+   flex: 1;
 }
 
 @tailwind base;
